opa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  labels:
    app: opa
spec:
  selector:
    app: opa
  ports:
    - name: http
      port: 8181
      targetPort: 8181
      protocol: TCP
