opa/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opa
  labels:
    app: opa
spec:
  to:
    kind: Service
    name: opa
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
